[package]
name = "libsdbootconf"
version = "0.4.1"
license = "MIT"
authors = ["Kaiyang Wu <origincode@aosc.io>"]
edition = "2021"
description = "A systemd-boot configuration and boot entry configuration parser library"
repository = "https://github.com/OriginCode/libsdbootconf"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
